Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25926

sensors doc warnings (qml modules missing minor version number)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.0.0, 5.9.7
    • 5.0.0
    • Sensors
    • None
    • 41d9f3bde1214a75f0e72ee56153f12c0c7c0963 (qt/qtsensors/5.12.0)

      You couldn't supply a minor version when these statements were put into the docs. Looks like we need to have a number now.

      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:197: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:197: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:242: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:262: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:291: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:321: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:348: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:378: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:405: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:430: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:459: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:494: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:521: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:551: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:578: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:598: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:627: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:657: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:686: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:721: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:749: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:770: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:797: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:828: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors/sensors.cpp:854: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors2/qsensor2common.cpp:50: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors2/qsensor2common.cpp:50: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors2/qsensor2tilt.cpp:55: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors2/qsensor2proximity.cpp:50: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors2/qsensor2ambientlight.cpp:50: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      /home/lramsay/git/qt5/qtsensors/src/imports/sensors2/qsensor2gesture.cpp:52: Minor version number missing for '\qmlmodule' or '\inqmlmodule'; 0 assumed.
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lramsay Lincoln Ramsay (closed Nokia identity) (Inactive)
            lramsay Lincoln Ramsay (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes