Missing minor numbers in versions

Fixes: QTBUG-25926
Change-Id: I3a2942b13a9d335a9c564b23cb4a79241d6895af
Reviewed-by: Zsolt Simon <zsolt.simon@nokia.com>