src/imports/sensors2/qsensor2common.cpp
@@ -47,7 +47,7 @@ QT_BEGIN_NAMESPACE
 
 /*!
     \qmlclass Sensor qsensor2common
-    \inqmlmodule QtSensors 5
+    \inqmlmodule QtSensors 5.0
     \brief The Sensor type serves as a base type for sensors.
 
     The Sensor type serves as a base type for sensors.
