src/imports/sensors2/qsensor2proximity.cpp
@@ -47,8 +47,7 @@ QT_BEGIN_NAMESPACE
 /*!
     \qmlclass ProximitySensor QSensor2Proximity
     \inherits QtSensors5::Sensor
-    \inqmlmodule QtSensors 5
-    \ingroup qml-QtSensors5
+    \inqmlmodule QtSensors 5.0
     \since QtSensors 5.0
     \brief Provides access to the proximity sensor.
 
